# flacx

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.ko.md  README.md  TODO.md
.github/workflows/: release.yml
.omx/logs/: release-notes-v0.3.0.md
.omx/reports/perf/: encoding-performance-max-limits-decode-recovery.md
benchmarks/: locked-corpus.txt
crates/flacx/: Cargo.toml  README.ko.md  README.md
crates/flacx-cli/: Cargo.toml  README.ko.md  README.md
crates/flacx-cli/benches/: directory_parity.rs
crates/flacx-cli/examples/: directory_parity.rs
crates/flacx-cli/src/: lib.rs  main.rs
crates/flacx-cli/tests/: cli.rs
crates/flacx/benches/: throughput.rs
crates/flacx/examples/: benchmark.rs
crates/flacx/src/: aiff.rs  aiff_output.rs  caf.rs  caf_output.rs  config.rs  convenience.rs  decode.rs  decode_output.rs  encode_pipeline.rs  encoder.rs  error.rs  frame.rs  input.rs  level.rs  lib.rs  md5.rs  metadata.rs  model.rs  pcm.rs  plan.rs  progress.rs  raw.rs  read.rs  recompress.rs  reconstruct.rs  stream_info.rs  wav_input.rs  wav_output.rs  write.rs
crates/flacx/src/metadata/: blocks.rs  draft.rs
crates/flacx/src/read/: chunk.rs  frame.rs  index.rs  metadata.rs  mod.rs  producer.rs  profile.rs  session.rs  slab.rs
crates/flacx/src/recompress/: config.rs  mod.rs  progress.rs  session.rs  source.rs  verify.rs
crates/flacx/src/write/: frame.rs  mod.rs
crates/flacx/tests/: api.rs  decode.rs  encode.rs  feature_gates.rs  format_envelope.rs  recompress.rs
crates/flacx/tests/support/: mod.rs
docs/: flacx-api-allocation-refactor-review.md  flacx-api-migration.md  flacx-cli-encoding-performance-review.md  flacx-encoding-performance-max-limits-decode-recovery.md  flacx-encoding-performance-recovery.md  flacx-family-parity.md  flacx-ground-up-ownership-map.md  flacx-major-refactor-review.ko.md  flacx-major-refactor-review.md  flacx-public-api-architecture.ko.md  flacx-public-api-architecture.md  flacx-recompress-performance-recovery.md  flacx-user-guide.md  migration-v4.md  migration-v5.md  releasing.ko.md  releasing.md  zero-loss-pcm-remainder-register.ko.md  zero-loss-pcm-remainder-register.md
docs/superpowers/specs/: 2026-04-21-cli-byte-throughput-reporting-design.md  2026-04-21-progress-read-write-throughput-design.md  2026-04-21-streaming-decode-architecture-design.md  2026-04-22-decode-segmented-window-design.md  2026-04-22-decode-throughput-parity-case2-design.md  2026-04-22-flacx-public-api-hard-reset-design.md  2026-04-23-decode-background-producer-design.md  2026-04-23-decode-encode-shaped-simplification-design.md  2026-04-24-decode-single-pass-direct-dispatch-design.md  2026-04-24-test-benchmark-cleanup-design.md
examples/: benchmark.rs
scripts/: cli_perf_compare.py  flacx_api_allocation_refactor_evidence.py  recompress_evidence.py
src/: crc.rs  encoder.rs  error.rs  flac_writer.rs  frame.rs  lib.rs  main.rs  metadata.rs  wav.rs
tests/: api.rs  cli.rs  encode.rs
