[workspace]
members = ["crates/flacx", "crates/flacx-cli"]
default-members = ["crates/flacx", "crates/flacx-cli"]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/ghfhffh12345/flacx"

[workspace.dependencies]
bitstream-io = "4.9.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
