[workspace]
members = ["crates/flacx", "crates/flacx-cli"]
default-members = ["crates/flacx", "crates/flacx-cli"]
resolver = "3"

[workspace.package]
version = "0.10.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/ghfhffh12345/flacx"

[workspace.dependencies]
bitstream-io = "4.9.0"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.8.2"
walkdir = "2.5"
