[package]
name = "flacx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line WAV/FLAC converter powered by the flacx library."
publish = false

[dependencies]
clap.workspace = true
flacx = { path = "../flacx", features = ["progress"] }
terminal_size.workspace = true
unicode-width.workspace = true
walkdir.workspace = true

[[bench]]
name = "directory_parity"
harness = false

[dev-dependencies]
criterion.workspace = true

[[bin]]
name = "flacx"
path = "src/main.rs"
doc = false
