[package]
name = "flacx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance WAV/FLAC conversion library in Rust."
readme = "README.md"
keywords = ["audio", "flac", "wav", "codec"]
categories = ["compression", "multimedia::audio"]

[features]
default = []
progress = []

[dependencies]
bitstream-io.workspace = true
