[package]
name = "flacx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance WAV/FLAC conversion library in Rust."
readme = "README.md"
keywords = ["audio", "flac", "wav", "codec"]
categories = ["compression", "multimedia::audio"]

[features]
default = ["wav", "aiff", "caf"]
progress = []
wav = []
aiff = []
caf = []

[dependencies]
bitstream-io.workspace = true

[[bench]]
name = "throughput"
harness = false

[dev-dependencies]
criterion.workspace = true
