[package]
name = "flacx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Convert supported PCM containers to FLAC, decode FLAC back to PCM containers, and recompress existing FLAC streams."
readme = "README.md"
keywords = ["audio", "flac", "wav", "aiff", "caf", "codec"]
categories = ["compression", "multimedia::audio"]

[features]
default = ["wav", "aiff", "caf"]
progress = []
wav = []
aiff = []
caf = []

[dependencies]
bitstream-io.workspace = true

[[bench]]
name = "throughput"
harness = false

[dev-dependencies]
criterion.workspace = true
